--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -1,3 +1,23 @@
+@article{hall1991two,
+  title={Two guidelines for bootstrap hypothesis testing},
+  author={Hall, Peter and Wilson, Susan R},
+  journal={Biometrics},
+  pages={757--762},
+  year={1991},
+  publisher={JSTOR}
+}
+
+@article{efron1985bootstrap,
+  title={Bootstrap confidence intervals for a class of parametric problems},
+  author={Efron, Bradley},
+  journal={Biometrika},
+  volume={72},
+  number={1},
+  pages={45--58},
+  year={1985},
+  publisher={Oxford University Press}
+}
+
 @article{smirnov1948table,
   title={Table for estimating the goodness of fit of empirical distributions},
   author={Smirnov, Nickolay},
@@ -186,7 +206,7 @@
   author =	 {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address =	 {Vienna, Austria},
-  year =	 2020,
+  year =	 2022,
   url =		 {https://www.R-project.org/},
 }
 
