--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -139,7 +139,7 @@ showed how to correct it. They further noted that both parametric and
 non-parametric procedures lead to correct asymptotic levels.
 
 
-The standard KS test does not apply to serially dependent data either. The
+The standard KS test does not apply to stationary yet dependent data either. The
 distribution of the KS statistic would have a higher variance for positively
 dependent data than that derived when the data are independent because of a
 smaller effective sample size. For example, for
