--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -1,44 +1,22 @@
-@article{hall1991two,
-  title={Two guidelines for bootstrap hypothesis testing},
-  author={Hall, Peter and Wilson, Susan R},
-  journal={Biometrics},
-  pages={757--762},
-  year={1991},
-  publisher={JSTOR}
+@Manual{R,
+  title =	 {R: A Language and Environment for Statistical Computing},
+  author =	 {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address =	 {Vienna, Austria},
+  year =	 2022,
+  url =		 {https://www.R-project.org/},
 }
 
-@article{efron1985bootstrap,
-  title={Bootstrap confidence intervals for a class of parametric problems},
-  author={Efron, Bradley},
-  journal={Biometrika},
-  volume={72},
-  number={1},
-  pages={45--58},
-  year={1985},
-  publisher={Oxford University Press}
+@Manual{Rpkg:copula,
+  title =	 {copula: Multivariate Dependence with Copulas},
+  author =	 {Marius Hofert and Ivan Kojadinovic and Martin Maechler and Jun
+                  Yan},
+  year =	 2020,
+  note =	 {R package version 1.0-1},
+  url =		 {https://CRAN.R-project.org/package=copula},
 }
 
-@article{smirnov1948table,
-  title={Table for estimating the goodness of fit of empirical distributions},
-  author={Smirnov, Nickolay},
-  journal={The Annals of Mathematical Statistics},
-  volume={19},
-  number={2},
-  pages={279--281},
-  year={1948},
-  publisher={Institute of Mathematical Statistics}
-}
-
-@article{kolmogorov1933sulla,
-  title={Sulla determinazione empirica di una lgge di distribuzione},
-  author={Kolmogorov, Andrey},
-  journal={Giornale dell'Istituto Italiano degli Attua},
-  volume={4},
-  pages={83--91},
-  year={1933}
-}
-
-@article{Arnold,
+@article{arnold2011nonparametric,
   title =	 {Nonparametric Goodness-of-Fit Tests for Discrete Null
                   Distributions},
   author =	 {Taylor A. Arnold and John W. Emerson},
@@ -49,7 +27,7 @@
   pages =	 {34--39},
 }
 
-@article{Babu,
+@article{babu2004goodness,
   title =	 {Goodness-of-fit tests when parameters are estimated},
   author =	 {Gutti Jogesh Babu and C. R. Rao},
   journal =	 {Sankhya: The Indian Journal of Statistics},
@@ -58,7 +36,7 @@
   pages =	 {63--74}
 }
 
-@article{Capasso,
+@article{capasso2009approximating,
   author =	 {Capasso, Marco and Alessi, Lucia and Barigozzi, Matteo and
                   Fagiolo, Giorgio},
   journal =	 {Advances in Complex Systems},
@@ -70,7 +48,7 @@
   year =	 2009
 }
 
-@article{Conover,
+@article{conover1972kolmogorov,
   author =	 {W. J. Conover},
   journal =	 {Journal of the American Statistical Association},
   number =	 339,
@@ -82,16 +60,7 @@
   year =	 1972
 }
 
-@Manual{Copula,
-  title =	 {copula: Multivariate Dependence with Copulas},
-  author =	 {Marius Hofert and Ivan Kojadinovic and Martin Maechler and Jun
-                  Yan},
-  year =	 2020,
-  note =	 {R package version 1.0-1},
-  url =		 {https://CRAN.R-project.org/package=copula},
-}
-
-@article{Dimitrova,
+@article{dimitrova2020computing,
   author =	 {Dimitrova, Dimitrina S. and Kaishev, Vladimir K. and Tan,
                   Senren},
   journal =	 {Journal of Statistical Software},
@@ -102,7 +71,7 @@
   year =	 2020
 }
 
-@article{Durilleul,
+@article{durilleul1992lack,
   author =	 {Pierre Durilleul and Pierre Legendre},
   journal =	 {Journal of Statistical Computation and Simulation},
   number =	 {1-2},
@@ -113,19 +82,31 @@
   year =	 1992
 }
 
-@article{Genest,
+@article{efron1985bootstrap,
+  title =	 {Bootstrap confidence intervals for a class of parametric
+                  problems},
+  author =	 {Efron, Bradley},
+  journal =	 {Biometrika},
+  volume =	 72,
+  number =	 1,
+  pages =	 {45--58},
+  year =	 1985,
+  publisher =	 {Oxford University Press}
+}
+
+@article{genest2008validity,
   author =	 {Christian Genest and Bruno R{\'e}millard},
   journal =	 {Annales de l'Institut Henri Poincar{\'e}, Probabilit{\'e}s et
                   Statistiques},
   number =	 6,
   pages =	 {1096--1127},
-  title =	 {{Validity of the parametric bootstrap for goodness-of-fit
-                  testing in semiparametric models}},
+  title =	 {Validity of the parametric bootstrap for goodness-of-fit
+                  testing in semiparametric models},
   volume =	 44,
   year =	 2008
 }
 
-@article{Gleser,
+@article{gleser1984exact,
   author =	 {Leon Jay Gleser},
   journal =	 {Journal of the American Statistical Association},
   number =	 392,
@@ -137,7 +118,16 @@
   year =	 1985
 }
 
-@Book{Hofert,
+@article{hall1991two,
+  title =	 {Two guidelines for bootstrap hypothesis testing},
+  author =	 {Hall, Peter and Wilson, Susan R},
+  journal =	 {Biometrics},
+  pages =	 {757--762},
+  year =	 1991,
+  publisher =	 {JSTOR}
+}
+
+@Book{hofert2018elements,
   title =	 {{E}lements of {C}opula {M}odeling with \textsf{R}},
   year =	 2018,
   publisher =	 {Springer Use R! Series},
@@ -147,8 +137,17 @@
                   Yan},
 }
 
-@article{Lanzante,
-  author =	 {Lanzante, John},
+@article{kolmogorov1933sulla,
+  title =	 {Sulla determinazione empirica di una lgge di distribuzione},
+  author =	 {Kolmogorov, Andrey},
+  journal =	 {Giornale dell'Istituto Italiano degli Attua},
+  volume =	 4,
+  pages =	 {83--91},
+  year =	 1933
+}
+
+@article{lanzante2021testing,
+  author =	 {lanzante, John},
   year =	 2021,
   month =	 05,
   pages =	 {6314-–6323},
@@ -159,7 +158,7 @@
   journal =	 {International Journal of Climatology}
 }
 
-@article{Lilliefors,
+@article{lilliefors1967kolmogorov,
   title =	 {On the {K}olmogorov-{S}mirnov Test for Normality with Mean and
                   Variance Unknown},
   author =	 {Hubert W. Lilliefors},
@@ -171,7 +170,7 @@
   publisher =	 {American Statistical Association}
 }
 
-@article{Marsaglia,
+@article{marsaglia2003evaluating,
   author =	 {Marsaglia, George and Tsang, Wai Wan and Wang, Jingbo},
   journal =	 {Journal of Statistical Software},
   number =	 18,
@@ -181,7 +180,7 @@
   year =	 2003
 }
 
-@article{Massey,
+@article{massey1951komlmogorov,
   title =	 {The {K}olmogorov-{S}mirnov Test for Goodness of Fit},
   author =	 {Frank J. Massey},
   journal =	 {Journal of the American Statistical Association},
@@ -192,7 +191,7 @@
   publisher =	 {Taylor \& Francis}
 }
 
-@article{Noether,
+@article{noether1963note,
   title =	 {Note on the {K}olmogorov statistic in the discrete case},
   author =	 {Gottfried E. Noether},
   journal =	 {Metrika},
@@ -201,16 +200,19 @@
   pages =	 {115--116}
 }
 
-@Manual{R,
-  title =	 {R: A Language and Environment for Statistical Computing},
-  author =	 {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address =	 {Vienna, Austria},
-  year =	 2022,
-  url =		 {https://www.R-project.org/},
+@article{smirnov1948table,
+  title =	 {Table for estimating the goodness of fit of empirical
+                  distributions},
+  author =	 {Smirnov, Nickolay},
+  journal =	 {The Annals of Mathematical Statistics},
+  volume =	 19,
+  number =	 2,
+  pages =	 {279--281},
+  year =	 1948,
+  publisher =	 {Institute of Mathematical Statistics}
 }
 
-@article{Steinskog,
+@article{steinskog2007cautionary,
   title =	 {A Cautionary Note on the Use of the {K}olmogorov-{S}mirnov
                   Test for Normality},
   author =	 {Dag J. Steinskog and Dag B. Tj{\o}stheim and Nils
@@ -222,7 +224,7 @@
   year =	 2007
 }
 
-@article{Weiss,
+@article{weiss1978modification,
   title =	 {Modification of the {K}olmogorov-{S}mirnov Statistic for Use
                   with Correlated Data},
   author =	 {Marc S. Weiss},
