smoothed early section 3

--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -146,6 +146,18 @@
   year =	 1933
 }
 
+@article{kunsch1989jackknife,
+  title =	 {The Jackknife and the Bootstrap for General Stationary
+                  Observations},
+  author =	 {Kunsch, Hans R},
+  journal =	 {The Annals of Statistics},
+  pages =	 {1217--1241},
+  volume =	 17,
+  number =	 3,
+  year =	 1989,
+  publisher =	 {JSTOR}
+}
+
 @article{lanzante2021testing,
   author =	 {lanzante, John},
   year =	 2021,
@@ -180,7 +192,7 @@
   year =	 2003
 }
 
-@article{massey1951komlmogorov,
+@article{massey1951kolmogorov,
   title =	 {The {K}olmogorov-{S}mirnov Test for Goodness of Fit},
   author =	 {Frank J. Massey},
   journal =	 {Journal of the American Statistical Association},
