--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -104,37 +104,37 @@ distribution~$F$. As $n \to \infty$, $D_n$ converges in distribution to
 the supremum of standard Brownian bridge \citep{kolmogorov1933sulla}. For large
 samples, the tests can be performed with a table \citep{smirnov1948table}.
 Critical values for small samples ($n \le 35$) has also been given
-\citep{Massey}. The KS test is available in popular
+\citep{massey1951kolmogorov}. The KS test is available in popular
 statistical software packages, such as function \texttt{ks.test} in R package
-\textsf{stats} \citep{R, Marsaglia}.
+\textsf{stats} \citep{R, marsaglia2003evaluating}.
 
 
 The standard one-sample KS test applies to independent data with a continuous
 hypothesized distribution that is completely specified. In practice, however, it
 has often been applied without realizing that one or more of these assumptions
-do not hold. For example, \citet{Noether} demonstrated the conservativeness of
+do not hold. For example, \citet{noether1963note} showed the conservativeness of
 the KS test when applied to discontinuous distributions. The null distribution
 of the KS statistic is no longer distribution free. Computing the
 exact and asymptotic distribution of $D_n$ is challenging. Fortunately, the null
-distribution of the KS statistic when the underlying distribution is
-discontinuous has been efficiently addressed by \citet{Dimitrova} with an
+distribution of the KS statistic for discontinuous distributions has been
+efficiently addressed by \citet{dimitrova2020computing} with an
 companion R package \textsf{KSgeneral}. Although a common misuse of KS test, the
 issue with discontinuous or data is not our focus.
 
 
-When the hypothesized distribution contains fitted parameters, as is the case in
-most goodness-of-fit test settings, the standard KS test is not applicable.
-\citet{Steinskog} ``discovers'' the change in power
+When the hypothesized distribution~$F$ contains unspecified parameters, as is
+the case in most goodness-of-fit test settings, the standard KS test is not
+applicable. \citet{steinskog2007cautionary} ``discovers'' the change in power
 when using fitted parameters and stresses caution in using the KS test in
 such ways. In fact, using fitted parameters in place of the true parameters in
 KS test is long known to yield extremely conservative results
-\citep[e.g.,][]{Lilliefors}. This problem can be solved by parametric
-bootstrap \citep{efron1985bootstrap, hall1991two}, where
+\citep[e.g.,][]{lilliefors1967kolmogorov}. This problem can be solved by
+parametric bootstrap \citep{efron1985bootstrap, hall1991two}, where
 bootstrap samples of the testing statistics are constructed from samples
 generated from the fitted hypothesized distribution. A nonparametric bootstrap
 solution is not trivial because the a nonparametric bootstrap sample of the
 observed data have ties, which would not happen for continuous distributions.
-\citet{Babu} derived the bias of standard nonparametric bootstrap and
+\citet{babu2004goodness} derived the bias of standard nonparametric bootstrap and
 showed how to correct it. They further noted that both parametric and
 non-parametric procedures lead to correct asymptotic levels.
 
@@ -142,13 +142,13 @@ non-parametric procedures lead to correct asymptotic levels.
 The standard KS test does not apply to stationary yet dependent data either. The
 distribution of the KS statistic would have a higher variance for positively
 dependent data than that derived when the data are independent because of a
-smaller effective sample size. For example, for
-testing normality, \citet{Durilleul} demonstrates that a naive application of
+smaller effective sample size. For example, for testing normality,
+\citet{durilleul1992lack} demonstrates that a naive application of
 the KS statistic is too liberal for medium-to-high positive serieal dependence,
 and that for negative dependence, the behavior is asymmetrical. For remedies,
-\citet{Weiss} provides a procedure that is applicable specifically for data
+\citet{weiss1978modification} provides a procedure that is applicable specifically for data
 modeled by the second-order auto-regressive (AR) process where the AR parameters
-are known. \citet{Lanzante} tests various strategies for dealing with temporal
+are known. \citet{lanzante2021testing} tests various strategies for dealing with temporal
 dependence and concludes that a test based on Monte-Carlo simulations performed
 the best. When additionally the hypothesized distribution contains unknown
 parameters, the standard KS test becomes even further inapplicable.
@@ -198,8 +198,8 @@ KS statistic would then be computed as
   D_n = \sqrt{n} \sup_x | F_n(x) - F_{\hat\theta_n}(x) |.
 \end{equation}
 An overly large $D_n$ still indicates evidence to reject~$H_0$. To get the
-p-value of the observed $D_n$, however, the null distribution is not the same as
-that in the standard
+p-value of the observed $D_n$, however, note that the null distribution is not
+the same as that in the standard
 case~\eqref{eq:ks_standard}. If the same null distribution were used, one would
 be testing a different~$H_0$ that the random sample comes from the specific
 member distribution~$F_{\hat\theta}$ instead of the family~$F_\theta$.
@@ -248,7 +248,7 @@ greater than or equal to~$D_n$.
 
 
 Nonparametric bootstrap can also be used to approximate the null distribution
-of the testing statistic with the bias correction from \citet{Babu}:
+of the testing statistic with the bias correction from \citet{babu2004goodness}:
 \begin{enumerate}
 \item
   Draw a random sample $X_1^*,...,X_n^*$ from the empirical distribution $F_n$
@@ -263,7 +263,7 @@ of the testing statistic with the bias correction from \citet{Babu}:
     D^* = \sup_x | F_n^* (x)- F_{\hat\theta_n}^*(x) - B_n(x) |.
   \]
   where $B_{n}(x) = \sqrt{n}(F_{n}(x) - F_{\hat\theta_n}(x))$ is the known
-  bias term \citep{Babu}
+  bias term \citep{babu2004goodness}
 \item
   Repeat the previous steps a large number $B$ times and use the empirical
   distribution of $D^*$ to approximate the null distribution of the observed
@@ -277,13 +277,13 @@ are greater than or equal to~$D_n$.
 \begin{figure}[tbp]
   \centering
   \includegraphics[width=\textwidth]{hist_fitted}
-  \caption{The Naive plot (left) is the histogram of p-values from the standard
-  KS test with fitted parameters. The Parametric plot (middle) is the histogram
-  of p-values from implementing parametric bootstrap. The Babu plot (right) is
-  the histogram of p-values from implementing nonparametric bootstrap with a
-  correction for bias. In each case, $1000$ replicate tests were performed on
-  the standard normal distribution with sample size $n = 100$. $B = 1000$
-  bootstrap samples are obtained for each test. \eds{perhaps use density hist vs
+  \caption{Histograms of p-values for the KS test with unspecified parameters in
+    the hypothesized distribution based on 1000 replicates of sample size
+    $n = 100$. Naive (left): KS test with KS statistic calculated based on fitted
+    parameters. Parametric bootstrap (center): KS test with parametric
+    bootstrap. Nonparametric bootstrap (right): KS test with nonparametric
+    bootstrap using the bias correction from \citet{babu2004goodness}.
+    \eds{perhaps use density hist vs
 	freq. hist (here and elsewhere)?}}
   \label{fig:hist_fitted}
 \end{figure}
@@ -301,60 +301,77 @@ standard uniform distributions.
 \section{Serially Dependent Data}
 \label{sec:dependence}
 
-The KS test also displays issues in the case of dependent data. As mentioned, an
-assumption of the test is that the data is independent. Real data, however,
-is often temporally or spatially dependent and the results of a goodness-of-fit
-test would be valuable. When the KS test is performed on dependent data it
-performs poorly. In this situation, the null hypothesis is $H_0$: the random
-sample $X_1, \ldots, X_n$ come from a continuous distribution $F$ where $F$ has
-completely specified parameters. The test statistic is the same as
-Equation~\eqref{eq:ks_standard}. However, since the data is dependent, the null
-hypothesis is wrong and must be corrected.
-\eds{null hypothesis or null distribution? or both?}
-This is demonstrated with a
-simulation in Figure~\ref{fig:hist_correlation}. Data is generated from a
-first-order autoregressive model (AR(1)) with a standard normal distribution.
-P-values are gathered from $1000$ replicate tests for different levels of the
-AR coefficient $\psi$, varying from $(-3,3)$.
-\eds{how are these p-values calculated?}
-In the presence of serially
-dependent data, the distribution of p-values no longer follows $U(0, 1)$ as
-would be expected of a valid test. The results echo those of \citet{Durilleul}
-that the KS statistic is too liberal in the presence of positive
-autocorrelation, and that the behavior is asymmetrical for negative
- autocorrelation.
+When the observed data $X_1, \ldots, X_n$ are not independent but serially
+dependent, the null distribution of the KS statistic $D_n$
+in~\eqref{eq:ks_standard} changes. For a
+stationary series, it may still be of interest to test whether the data come
+from a completely specified distribution~$F$. When the serial dependence is
+positive, the effective sample size is less than~$n$. The testing statistic
+would be stochastically greater than that obtained from independent data, making
+it more likely to reject the null hypothesis than it should. So the test is
+liberal. The reasoning is similar when the serial dependence is negative,
+in which case, the test is conservative.
+
+
+The invalidity of the statndard statistic for serially dependent data can be
+illustrated by a simple simulation study. Consider a first-order autoregressive
+or AR(1) model with marginal standard normal distribution. For each AR
+coefficient $\psi \in \{-0.3, 0.2, 0.1, 0, 0.1, 0.2, 0.3\}$, we generated 1000
+series of length 100. For each series, we applied the KS statistic
+in~\eqref{eq:ks_standard} to test $H_0$ that the $X_i$'s follow $N(0, 1)$
+marginally. The histograms of the p-values from $1000$ replicates for all the
+$\psi$ values are displayed in Figure~\ref{fig:hist_correlation}. When
+$\phi \ne 0$, the histograms do not look like to be generated from a standard
+uniform distribution. Positive $\psi$ values led to liberal p-values while
+negative $\psi$ values led to conservative p-values. The larger the magnitude of
+$\psi$, the bigger the deviation from the desired level.
 
 \begin{figure}[tbp]
   \centering
   \includegraphics[width=\textwidth]{hist_correlation}
-  \caption{Each histogram is a plot of the p-values of standard KS tests
-  performed on dependent data simulated from an AR(1) process of the standard
-  normal distribution. The titles represent the various levels of the AR
-  coefficient $\psi$ tested. The sample size is $n = 100$ and $1000$ replicate
-  tests were performed for each AR coefficient.}
+  \caption{Histograms of p-values for the KS test applied to data generated from
+    AR(1) processes with AR coefficients
+    $\psi \in \{-0.3, -0.2, -0.1, 0, 0.1, 0.2, 0.3\}$
+    based on 1000 replicates of sample size $n = 100$.}
   \label{fig:hist_correlation}
 \end{figure}
 
-In order to correct this, we can employ a parametric bootstrap procedure which
-assumes a working serial dependence structure through copulas. A copula is a
+
+A complete remedy for the KS tests with serially dependent data is
+challenging. The null distribution depends on the structure of the serial
+dependence, which can be arbitrary in practice. A parametric bootstrap procedure
+would need model specification of the dependence, whereas the primary interest
+is to test the marginal distribution of the stationary series. A block
+nonparametric bootstrap for stationary data \citep{kunsch1989jackknife} is
+attempting, but the counterpart of a bias correction as in
+\citet{babu2004goodness} is not available yet. Is there any approach that does
+not require fully specification of the dependence of the stationary process
+but still gives reasonably satisfactory correction to the size of the KS test in
+certain applications?
+
+
+We propose a semiparametric bootstrap procedure that assumes a working serial
+dependence structure which does not need to be correctly specified. The working
+serial dependence is introduced through copulas with the hope to approximate the
+true serial dependence as allowed by the working copulas. A copula is a
 multivariate distribution with standard uniform marginal distributions, which
 completely characterizes the dependence structure of a multivariate
-distribution \citep{Copula, Hofert}. For simplicity, we assume a normal copula
-with an AR(1) structure to characterize the serial dependence of the
-observations. The AR(1) parameter $r$ of the normal copula is set to match the
-sample serial Spearman's rho of the observed data.
-\eds{What is the difference between $\psi$ and $r$?}
-The procedure is as
-follows.
-
+distribution \citep{hofert2018elements}. It separates the dependence structure
+of a multivariate distribution from its marginal distributions. The normal copula
+is the copula determined by the multivariate normal distribution. We propose to
+use a normal working copula with an AR(1) structure to approximate the serial
+dependence of the observations. Let $\hat\rho$ be the lag-1 sample auto
+Spearman's rho of the observed data. A normal copula of dimension~$n$ can be
+constructed with an AR(1) structure and its AR coefficient~$\psi$ is chosen to
+ensure that the Spearman's rho matches $\hat\rho$. Let $\psi(\hat\rho)$ denote
+this coefficient. The bootstrap procedure is as follows.
 \begin{enumerate}
 \item
   Generate $Z_1, \ldots, Z_n$ from an AR(1) process with autocorrelation
-  coefficient $r$ such that the $Z_i$'s are $N(0, 1)$ variables.
+  coefficient $\psi(\hat\rho)$ such that the $Z_i$'s are $N(0, 1)$ variables.
 \item
-  Form a bootstrap sample $X_i^* = F^{-1} [\Phi(Z_i)]$, where $\Phi$ is the
-  distribution function of $N(0, 1)$, $i = 1, \ldots, n$, whose first-order
-  sample Spearman's rho matches that of the observed data.
+  Form a bootstrap sample $X_i^* = F^{-1} [\Phi(Z_i)]$,  $i = 1, \ldots, n$,
+  where $\Phi$ is the distribution function of $N(0, 1)$.
 \item
   Obtain the empirical distribution function $F_n^*$ of the bootstrap sample
   $X_1^*, \ldots, X_n^*$.
@@ -365,15 +382,26 @@ follows.
   \]
 \item
   Repeat the previous steps a large number $B$ times and use the empirical
-    distribution of the $B$ test statistics to approximate
-    the null distribution of the observed statistic.
+  distribution of the $B$ test statistics to approximate
+  the null distribution of the observed statistic.
 \end{enumerate}
+The p-value of $D_n$ is, again, approximated by the proportion of $D_n^*$'s that
+are greater than or equal to~$D_n$.
 
+
+This process is semiparametric because the marginal distribution is
+parametrically specified while the dependence structure of the stationary series
+is only approximated. The closer the approximation is to the truth, the better
+performance of the size of the KS test  If the true dependence is indeed a
+normal copula with an AR(1) structure, this method is exact. When the true
+dependence is not AR(1), it may still give a reasonable approximation that can
+be useful for practical purposes. More complicated working models other
+than the AR(1) process could be used, but we focus here on the AR(1) model.
+
+
+Continuing with the simulation study, 
 Throughout the simulation we assume a working AR(1) dependence structure
-regardless of the true dependence. If the true dependence is indeed a normal
-copula with an AR(1) structure, this method is exact. When the true dependence
-is not AR(1), it may still give a reasonable approximation that can be useful
-for practical purposes. This is demonstrated with different dependence
+regardless of the true dependence. This is demonstrated with different dependence
 structures in Figure~\ref{fig:hist_ma1_arma_ar2_D}.
 
 \begin{figure}[tbp]
@@ -458,7 +486,7 @@ procedure in Section~\ref{sec:fitted} is no longer valid because the serial
 dependence is not accounted for. Let $r$ be the AR(1) coefficient of the normal
 copula that matches the sample first-order Spearman's rho of the observed data
 as obtained by the \texttt{iRho} function in the \textsf{copula} package
-\citep{Copula}. We propose the following bootstrap procedure to assess the
+\citep{Rpkg:copula}. We propose the following bootstrap procedure to assess the
 significance of the observed KS statistic.
 
 \begin{enumerate}
@@ -570,7 +598,7 @@ completely specified and the data is independent. When these assumptions are
 violated, the test is no longer accurate and remedies must be performed. In the
 case of fitted parameters, parametric and non-parametric bootstrap can restore
 the size of the test. A bias correction is required if the non-parametric form
-is used \citep{Babu}. In the case of \eds{serially} dependent data, a procedure
+is used \citep{babu2004goodness}. In the case of \eds{serially} dependent data, a procedure
 using bootstrap
 with copulas to model dependency shows positive results. When both assumptions
 are violated, i.e., where the data has \eds{serial} dependence and parameters
