--- a/Code/Simulation.Rmd
+++ b/Code/Simulation.Rmd
@@ -1560,7 +1560,7 @@ hist_gamma_gev_D2
 ggsave(filename = "hist_gamma_gev_D2.pdf", plot = hist_gamma_gev_D2, path = "../Manuscript", height = 4.2, width = 6)
 ```
 
-```{r Autoarma}
+```{r Autoarma D}
 source("autoarma.R")
 
 # Test autoarma as a solution to correlated data
@@ -1610,5 +1610,94 @@ hist_autoarma
 
 # Save the histogram figure
 ggsave(filename = "hist_autoarma.pdf", plot = hist_autoarma, path = "../Manuscript", height = 2.1, width = 6)
+```
+
+```{r Autoarma FD}
+test_autoarma_FD <- function(x, pdist, qdist, B = 1000, working=c("auto", "2,2")) {
+    z <- qnorm(pdist(x))
+    
+    n <- length(x)
+    m <- mean(x)
+    v <- var(x)
+    scale <- v/m
+    shape <- m*m/v
+    
+    stat  <- ks.test(x, "pgamma", shape = shape, scale = scale)$statistic
+    
+    if (working == "auto") {
+        fit <- forecast::auto.arima(z, ic = "aic", max.d = 0, max.D = 0, allowmean = FALSE)
+        ## stepwise=FALSE, approximation=FALSE)
+        ## working model: p.max = q.max = 5
+    } else {
+        pq <- as.numeric(unlist(strsplit(working, ",")))
+        fit <- arima(z, order = c(pq[1], 0, pq[2]), include.mean = FALSE) ## working arma(2, 2)
+    }
+    model <- list(ar = fit$model$phi, ma = fit$model$theta)
+
+    ## theoretical variance of arma; note the negative sign of theta; McLeod (1975)
+    sigma <- sqrt(ltsa::tacvfARMA(phi = model$ar, theta = - model$ma, maxLag = 0))
+    
+    stat.b <- rep(0, B)
+    for (i in 1:B) {
+        z.b <- arima.sim(model, n = n)
+        ##   arma(1, 1) only: sd = sqrt (1 - ophi^2) / (1 + 2 * phi * theta + theta^2))
+        x.b <- qgamma(pnorm(z.b, mean = 0, sd = sigma), shape = shape, scale = scale)
+        
+        m.b <- mean(x.b)
+        v.b <- var(x.b)
+        scale.b <- v.b/m.b
+        shape.b <- m.b*m.b/v.b
+        
+        # Calculate new test statistic
+        stat.b[i] <- ks.test(x.b, "pgamma", shape = shape.b, scale = scale.b)$statistic
+    }
+    p.value <- mean(stat.b >= stat)
+    
+    counter <<- counter + 1
+    cat(counter, "")
+    list(p.value = p.value)
+}
+
+# Generate results
+nrep <- 1000
+n <- 200
+phi <- .3
+theta <- .2
+shape <- 3
+scale <- 1
+qdist <- function(u) qgamma(u, shape = shape, scale = scale)
+pdist <- function(u) pgamma(u, shape = shape, scale = scale)
+working <- "auto"
+counter <- 0
+
+pvals_autoarma <- replicate(nrep, test_autoarma_FD(x = genData(n, phi, theta, qdist), 
+                                                   pdist = pdist, 
+                                                   qdist = qdist, 
+                                                   B = 1000, 
+                                                   working = working)$p.value)
+counter <- 0
+
+# P-vals from using parametric bootstrap
+pvals_parametric <- replicate(nrep, test_parametric_gamma(genData(n, phi, theta, qdist))$p.value)
+
+pvals_naive <- replicate(nrep, test_super_naive_gamma(genData(n, phi, theta, qdist))$p.value)
+
+# Create a master data_frame with all the results
+histogram <- c(rep("Autoarma", nrep), rep("Naive Parametric", nrep), rep("Super Naive", nrep))
+p_values <- c(pvals_autoarma, pvals_parametric, pvals_naive)
+results <- data_frame(p_values, histogram)
+
+results$histogram <- factor(results$histogram, levels = c("Super Naive", "Naive Parametric", "Autoarma"))
+
+# Generate histograms plot
+hist_autoarma_FD <- ggplot(results) + 
+                   geom_histogram(aes(x = p_values, fill = histogram), boundary = 0, binwidth = 1/20) + 
+                   scale_x_continuous(name = "p-value", breaks=c(0, 1)) + 
+                   theme(legend.position = "none") +
+                   facet_wrap(~histogram, scales = "free_y")
+hist_autoarma_FD
+
+# Save the histogram figure
+ggsave(filename = "hist_autoarma_FD.pdf", plot = hist_autoarma_FD, path = "../Manuscript", height = 2.1, width = 6)
 ```
 
